--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html>
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Colman-Egan Band Blog</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<link rel="shortcut icon" href="{% static 'images/llama_favicon.ico' %}" type="image/x-icon">
 	</head>
 	<body>
 		
