Changed name of website

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,14 +4,14 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Colman-Egan Band Blog</title>
+		<title>Colman-Egan Blog</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="shortcut icon" href="{% static 'images/llama_favicon.ico' %}" type="image/x-icon">
 	</head>
 	<body>
 		
 	<header class="container page-header">
-		<h1><a href="/">Colman-Egan Band Blog</a></h1>
+		<h1><a href="/">Colman-Egan Blog</a></h1>
 		<div class="row">
 		{% if user.is_authenticated %}
 			<!--Display User info-->
