--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,10 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Login</h2>
-<form method="post">
-	{% csrf_token %}
-	{{ form.as_p }}
-	<button type="submit">Login</button>
-</form>
+<div class="row">
+	<h2>Login</h2>
+	<form class="col-sm-6" method="post">
+		{% csrf_token %}
+		{{ form.as_p }}
+		<button type="submit">Login</button>
+	</form>
+	<iframe class="col-sm-6" width="560" height="315" src="https://www.youtube.com/embed/iHmLljk2t8M?autoplay=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+</div>
 {% endblock content %}
