--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -6,7 +6,7 @@
 	<form class="col-sm-6" method="post">
 		{% csrf_token %}
 		{{ form.as_p }}
-		<button type="submit">Login</button>
+		<button class="btn btn-default" type="submit">Login</button>
 	</form>
 	<iframe class="col-sm-6" width="560" height="315" src="https://www.youtube.com/embed/iHmLljk2t8M?autoplay=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 </div>
