--- a/templates/delete.html
+++ b/templates/delete.html
@@ -6,7 +6,7 @@
 		{% csrf_token %}
 		{% if post.author == user %}
 			<p>Are you sure you want to delete "{{ post.title }}"?</p>
-			<button type="submit" class="btn btn-primary">Delete</button>
+			<button type="submit" class="btn btn-default">Delete</button>
 		{% else %}
 			<p>Um... sir, you can't delete this. I don't know how you got here, but just leave</p>
 		{% endif %}
