--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,7 +5,8 @@ h1 a {
 
 main {
 	margin-left: 40px;
-    min-height: calc(100vh - 210px);
+    min-height: calc(100vh - 220px);
+    margin-bottom: 20px
 }
 
 /*Header stuff */
@@ -82,7 +83,16 @@ h1, h2, h3, h4 {
 }
 
 .comment-section {
-    margin: 10px 0 30px 0;
+    margin: 10px 0 30px 15px;
+}
+
+.combined-comment-section, hr {
+    margin-left: -15px;
+}
+
+.post-image {
+    max-width: 300px;
+    margin: 20px 20px 20px 20px;
 }
 
 /* Footer Stuff */
