--- a/templates/create.html
+++ b/templates/create.html
@@ -2,9 +2,11 @@
 
 {% block content %}
 	<h1>New Post</h1>
-	<form method="POST">
-		{% csrf_token %}
-		{{ form.as_p }}
-		<button class="btn btn-default" type="submit">Save</button>
-	</form>
+	<div class="form-group">
+		<form method="POST" enctype="multipart/form-data">
+			{% csrf_token %}
+			{{ form.as_p }}
+			<button class="btn btn-default" type="submit">Create Post</button>
+		</form>
+	</div>
 {% endblock %}
