--- a/templates/detail.html
+++ b/templates/detail.html
@@ -5,6 +5,9 @@
 		<div class="post">
 			<h1>{{ post.title }} <small>by {{post.author}}</small></h1>
 			<p>{{ post.text|linebreaksbr }}</p>
+			{% if post.image %}
+				<img src="{{ post.image.url }}" alt="Image for post {{ post.title }}" class="img-rounded img-responsive post-image">
+			{% endif %}
 			{% if post.published_date %}
 				<p>Published: {{ post.published_date|date:"l, F jS, Y \a\t P" }}
 					{% if post.edited_date %}
@@ -17,15 +20,50 @@
 					<a class="btn btn-default" href="{% url 'edit' pk=post.pk %}">Edit Post</a>
 					<a class="btn btn-default" href="{% url 'delete' pk=post.pk %}">Delete Post</a>
 				</div>
-			{% else %}
-				<div class="btn-group">
-					<button type="button" class="btn btn-default disabled">Edit Post</button>
-					<button type="button" class="btn btn-default disabled">Delete Post</button>
+			{% endif %}
+		</div>
+	</div>
+	<hr>
+	<!--New Comment Form-->
+	<div class="combined-comment-section">
+		<h3>Comments</h3>
+		<p><strong>{{ user }}</strong></p>
+		<div class="row">
+			<form method="POST">
+				<div class="form-group col-sm-10">
+					{% csrf_token %}
+					{{ create_comment_form.text.errors }}
+					{{ create_comment_form.text }}
 				</div>
+				<button type="submit" class="btn btn-default col-sm-2" value="Post Comment">Comment</button>
+			</form>
+		</div>
+		<!--Comment Section-->
+		<div class="comment-section">
+			{% if comments %}
+				{% for comment in comments %}
+					<div class="row">
+						<p><strong>{{ comment.author }}
+						{% if comment.edited %}
+							(Edited)
+						{% endif %}
+						</strong> <small>{{ comment.time_since_post }}</small></p>
+						<div class="col-sm-10">
+							<p>{{ comment.text }}</p>
+						</div>
+						<div class="col-sm-2">
+							{% if comment.author == user %}
+								<a href="{% url 'edit_comment' pk=comment.pk %}" class="btn btn-default">Edit Comment</a>
+							{% endif %}
+						</div>
+						<br><br>
+					</div>
+				{% endfor %}
 			{% endif %}
 		</div>
 	</div>
 	<!--Displays newer and older post buttons-->
+	<hr>
 	<div class="row">
 		<ul class="pager">
 			{% if older_post %}
@@ -39,40 +77,5 @@
 				<li class="next disabled"><a href="#">No Newer Posts</a></li>
 			{% endif %}
 		</ul>
-	</div>
-	<hr>
-	<!--New Comment Form-->
-	<h3>Comments</h3>
-	<p><strong>{{ user }}</strong></p>
-	<div class="row">
-		<form method="POST">
-			<div class="form-group col-sm-10">
-				{% csrf_token %}
-				{{ create_comment_form.text.errors }}
-				{{ create_comment_form.text }}
-			</div>
-			<button type="submit" class="btn btn-default col-sm-2" value="Post Comment">Comment</button>
-		</form>
-	</div>
-	<!--Comment Section-->
-	<div class="comment-section">
-		{% if comments %}
-			{% for comment in comments %}
-				<p><strong>{{ comment.author }}
-				{% if comment.edited %}
-					(Edited)
-				{% endif %}
-				</strong> <small>{{ comment.time_since_post }}</small></p>
-				<div class="col-sm-10">
-					<p>{{ comment.text }}</p>
-				</div>
-				<div class="col-sm-2">
-					{% if comment.author == user %}
-						<a href="{% url 'edit_comment' pk=comment.pk %}" class="btn btn-default">Edit Comment</a>
-					{% endif %}
-				</div>
-				<br><br>
-			{% endfor %}
-		{% endif %}
 	</div>
 {% endblock %}
