--- a/static/css/base.css
+++ b/static/css/base.css
@@ -91,8 +91,8 @@ h1, h2, h3, h4 {
 }
 
 .post-image {
-    max-width: 300px;
-    margin: 20px 20px 20px 20px;
+    max-width: 560px;
+    margin: 20px 20px 20px 0;
 }
 
 /* Footer Stuff */
