--- a/static/css/base.css
+++ b/static/css/base.css
@@ -9,6 +9,36 @@ main {
     margin-bottom: 20px
 }
 
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
+}
+
+.boop-message {
+    position: fixed;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 800px;
+    top: 100px;
+    font-size: 300px;
+    background-color: rgba(209, 209, 224, 0.8);
+    text-align: center;
+    padding: 20px 20px 20px 20px;
+    font-family: 'Lobster'
+}
+
+.video-caption {
+    margin-top: 10px;
+    margin-left: 30px;
+    font-size: 20px;
+    font-family: 'Lobster';
+}
+
 /*Header stuff */
 .page-header {
     background-color: #FFE800;
@@ -59,10 +89,6 @@ h1, h2, h3, h4 {
     font-family: 'Lobster', cursive;
 }
 
-.post {
-    margin-bottom: 30px;
-}
-
 .post h1 a, .post h1 a:visited {
     color: #000000;
 }
@@ -93,6 +119,23 @@ h1, h2, h3, h4 {
 .post-image {
     max-width: 560px;
     margin: 20px 20px 20px 0;
+}
+
+.post-body {
+    margin-bottom: 20px;
+}
+
+.published-edited-dates {
+    color: #6B7279;
+}
+
+#like-button {
+    float: right;
+}
+
+#edit-delete-buttons {
+    float: left;
+    margin-left: -15px;
 }
 
 /* Footer Stuff */
