--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -10,6 +10,13 @@
 			<button class="btn btn-default" type="submit">Login</button>
 		</form>
 	</div>
-	<iframe class="col-sm-6" width="560" height="315" src="https://www.youtube.com/embed/iHmLljk2t8M?autoplay=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+	<div class="col-sm-6" id="intro-video">
+		<div class="row">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/iHmLljk2t8M?autoplay=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+		</div>
+		<div class="row video-caption">
+			<p class="text-center">Because we're the hawks</p>
+		</div>
+	</div>
 </div>
 {% endblock content %}
