--- a/static/css/base.css
+++ b/static/css/base.css
@@ -98,12 +98,12 @@ h1, h2, h3, h4 {
     background-color: black;
 }
 
-.pager li a:hover, .btn-default:hover {
+.pager li a:hover, .pager li a:active, .btn-default:hover, .btn-default:active, .pressed {
     color: black;
     background-color: #FFE800;
 }
 
-.btn-default {
+.btn-default, .pressed:hover, .pressed:active {
     color: white;
     background-color: black;
 }
@@ -117,6 +117,7 @@ h1, h2, h3, h4 {
 }
 
 .post-image {
+    max-height: 1000px;
     max-width: 560px;
     margin: 20px 20px 20px 0;
 }
@@ -129,7 +130,7 @@ h1, h2, h3, h4 {
     color: #6B7279;
 }
 
-#like-button {
+#boop-unboop-buttons {
     float: right;
 }
 
