--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,7 +5,8 @@ h1 a {
 
 main {
 	margin-left: 40px;
-    min-height: calc(100vh - 220px);
+    margin-right: 40px;
+    min-height: calc(100vh - 162px);
     margin-bottom: 20px
 }
 
@@ -32,6 +33,22 @@ main {
     font-family: 'Lobster'
 }
 
+@media screen and (max-width: 800px) {
+    .boop-message {
+        position: fixed;
+        left: 0;
+        right: 0;
+        margin: auto;
+        width: 100%;
+        top: 100px;
+        font-size: 600%;
+        background-color: rgba(209, 209, 224, 0.8);
+        text-align: center;
+        padding: 40px 20px 40px 20px;
+        font-family: 'Lobster'
+    }
+}
+
 .video-caption {
     margin-top: 10px;
     margin-left: 30px;
@@ -40,48 +57,15 @@ main {
 }
 
 /*Header stuff */
-.page-header {
-    background-color: #FFE800;
-    margin-top: 0;
-    padding: 20px 20px 20px 20px;
-}
-
-.page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #000000;
-    font-size: 36pt;
-    text-decoration: none;
-}
-
-.page-header ul {
-    list-style-type: none;
-    margin: 20px 0 0 0;
-    padding: 0;
-    overflow: hidden;
-}
-
-.page-header ul li {
-    float: right;
-}
-
-.page-header a[href*="logout"], #display-user, .page-header a[href*="new"] {
-    display: block;
-    color: #000000;
-    text-align: center;
-    padding: 14px 16px;
-	text-decoration: none;
-}
-
-.page-header ul li a[href*="logout"] {
-    margin-right: 20px
-}
-
-.page-header a[href*="new"] {
-	color: black;
-}
-
-.page-header ul li .btn-default {
+.navbar {
+    border-radius: 0px;
     background-color: black;
-    color: white;
+}
+
+.navbar-inverse .navbar-header .navbar-brand {
+    font-family: 'Lobster';
+    font-size: 2.2em;
+    color: #FFE800;
 }
 
 /* Main stuff */
@@ -116,10 +100,26 @@ h1, h2, h3, h4 {
     margin-left: -15px;
 }
 
+@media screen and (max-width: 766px) {
+    .combined-comment-section .form-group button {
+        margin-left: 15px;
+        margin-top: 5px;
+    }
+}
+
 .post-image {
-    max-height: 600px;
-    max-width: 560px;
+    max-height: 500px;
     margin: 20px 20px 20px 0;
+}
+
+@media screen and (min-width: 560px) {
+    .post-image {
+        max-width: 560px;
+    }
+
+    .youtube-video {
+        width: 560px;
+    }
 }
 
 .post-body {
@@ -137,6 +137,13 @@ h1, h2, h3, h4 {
 #edit-delete-buttons {
     float: left;
     margin-left: -15px;
+}
+
+@media screen and (max-width: 418px) {
+    #boop-unboop-buttons {
+        float: left;
+        margin-left: -15px;
+    }
 }
 
 /* Footer Stuff */
