--- a/templates/base.html
+++ b/templates/base.html
@@ -13,22 +13,29 @@
 		<link rel="stylesheet" href="{% static 'css/base.css' %}">
 	</head>
 	<body>
-		<div class="container-fluid">
-			<header class="page-header row">
-				<div class="col-sm-8">
-					<h1><a href="/">Colman-Egan Blog</a></h1>
-				</div>
-				<div class="col-sm-4">
-					<ul>
-						{% if user.is_authenticated %}
-							<li><a class="btn btn-default" href="{% url 'create' %}"><span class="glyphicon glyphicon-plus"></span> New Post</a></li>
-							<li><a href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
-							<li><p id="display-user"><span class="glyphicon glyphicon-user"></span> Hi, {{ user.username }}.</p></li>
-						{% endif %}
-		    		</ul>
-	    		</div>
-			</header>
-		</div>
+		<nav class="navbar navbar-inverse">
+		  	<div class="container-fluid">
+			    <div class="navbar-header">
+			    	{% if user.is_authenticated %}
+				      	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-navbar">
+					        <span class="icon-bar"></span>
+					        <span class="icon-bar"></span>
+					        <span class="icon-bar"></span>
+				        </button>
+			        {% endif %}
+			        <a class="navbar-brand" href="/">Colman-Egan Blog</a>
+			    </div>
+			    {% if user.is_authenticated %}
+				    <div class="collapse navbar-collapse" id="main-navbar">
+						<a class="btn btn-default navbar-btn" href="{% url 'create' %}"><span class="glyphicon glyphicon-plus"></span> New Post</a>
+					    <ul class="nav navbar-nav navbar-right">
+					    	<li><a href="#"><span class="glyphicon glyphicon-user"></span> Hi, {{ user.username }}</a></li>
+						    <li><a href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+					    </ul>
+				    </div>
+			    {% endif %}
+		  	</div>
+		</nav>
 
 		<main>
 			<div class="container-fluid">
