--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,11 @@
 						<img src="{{ post.image.url }}" alt="Image for post {{ post.title }}" class="img-rounded img-responsive post-image">
 					{% endif %}
 					{% if post.youtube_video %}
-						<iframe width="560" height="315" src="{{ post.embed_link }}" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					<div class="youtube-video">
+						<div class="embed-responsive embed-responsive-16by9">
+							<iframe class="embed-responsive-item" width="560" height="315" src="{{ post.embed_link }}" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+						</div>
+					</div>
 					{% endif %}
 				</div>
 				<div class="published-edited-dates">
