--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -10,9 +10,11 @@
 			<button class="btn btn-default" type="submit">Login</button>
 		</form>
 	</div>
-	<div class="col-sm-6" id="intro-video">
-		<div class="row">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/iHmLljk2t8M?autoplay=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+	<div class="col-sm-6">
+		<div class="youtube-video">
+			<div class="embed-responsive embed-responsive-16by9">
+				<iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/iHmLljk2t8M?autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			</div>
 		</div>
 		<div class="row video-caption">
 			<p class="text-center">Because we're the hawks</p>
