--- a/templates/delete.html
+++ b/templates/delete.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="col-sm-9">
 	<h1>Delete Post</h1>
 	<div class="form-group">
 		<form method="POST">
@@ -13,4 +14,5 @@
 			{% endif %}
 		</form>
 	</div>
+</div>
 {% endblock %}
