--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="col-sm-9">
 	<h2>Sign up</h2>
 	<form method="post">
 		{% csrf_token %}
 		{{ form.as_p }}
 		<button class="btn btn-defaul" type="submit">Sign up</button>
 	</form>
+</div>
 {% endblock %}
