--- a/static/css/base.css
+++ b/static/css/base.css
@@ -157,6 +157,17 @@ h1, h2, h3, h4 {
     line-height: 2em;
 }
 
+#leaderboard {
+    background-color: #FFE800;
+    color: black;
+    padding:1px 10px 15px 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+iframe, img {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 /* Footer Stuff */
 footer {
     background-color: #FFE800;
