--- a/templates/create.html
+++ b/templates/create.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="col-sm-9">
 	<h1>New Post</h1>
 	<div class="form-group">
 		<form method="POST" enctype="multipart/form-data">
@@ -9,4 +10,5 @@
 			<button class="btn btn-default" type="submit">Create Post</button>
 		</form>
 	</div>
+</div>
 {% endblock %}
