--- a/templates/detail.html
+++ b/templates/detail.html
@@ -3,6 +3,7 @@
 {% load staticfiles %}
 
 {% block content %}
+<div class="col-sm-9">
 	<div class="row">
 		<div class="post">
 			<h1>{{ post.title }} <small>by {{ post.author }}</small></h1>
@@ -108,4 +109,5 @@
 			{% endif %}
 		</ul>
 	</div>
+</div>
 {% endblock %}
