--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,5 +1,5 @@
 html, body {
-    cursor: url(../images/cursor_hawk.png), auto;
+    cursor: url(../images/cursor_hawk_black.png), auto;
 }
 
 h1 a {
@@ -15,12 +15,12 @@ main {
 }
 
 .noselect {
-  -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-     -khtml-user-select: none; /* Konqueror HTML */
-       -moz-user-select: none; /* Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-            user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
+    -webkit-touch-callout: none; /* iOS Safari */
+      -webkit-user-select: none; /* Safari */
+       -khtml-user-select: none; /* Konqueror HTML */
+         -moz-user-select: none; /* Firefox */
+          -ms-user-select: none; /* Internet Explorer/Edge */
+              user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
 }
 
 .boop-message {
@@ -65,6 +65,7 @@ main {
     border-radius: 0px;
     background-color: black;
     height: 4em;
+    cursor: url(../images/cursor_hawk_yellow.png), auto;
 }
 
 .navbar-inverse .navbar-header .navbar-brand {
