--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,7 @@
 				    <div class="collapse navbar-collapse" id="main-navbar">
 						<a class="btn btn-default navbar-btn" href="{% url 'create' %}"><span class="glyphicon glyphicon-plus"></span> New Post</a>
 					    <ul class="nav navbar-nav navbar-right">
+					    	<li><a href="{% url 'flappy_hawk' %}"><span class="glyphicon glyphicon-knight"></span>    Flappy Hawk</a></li>
 					    	<li><a href="{% url 'user_view' %}"><span class="glyphicon glyphicon-user"></span> Hi, {{ user.username }}</a></li>
 						    <li><a href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
 					    </ul>
