--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 					{% if post.youtube_video %}
 					<div class="youtube-video">
 						<div class="embed-responsive embed-responsive-16by9">
-							<iframe class="embed-responsive-item" width="560" height="315" src="{{ post.embed_link }}" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							<iframe class="embed-responsive-item" width="560" height="315" src="{{ post.embed_link }}" frameborder="0" allowfullscreen></iframe>
 						</div>
 					</div>
 					{% endif %}
