--- a/templates/base.html
+++ b/templates/base.html
@@ -13,11 +13,11 @@
 		<link rel="stylesheet" href="{% static 'css/base.css' %}">
 	</head>
 	<body>
-		<nav class="navbar navbar-inverse">
+		<nav class="navbar navbar-inverse navbar-fixed-top">
 		  	<div class="container-fluid">
 			    <div class="navbar-header">
 			    	{% if user.is_authenticated %}
-				      	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-navbar">
+				      	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mainNavbar">
 					        <span class="icon-bar"></span>
 					        <span class="icon-bar"></span>
 					        <span class="icon-bar"></span>
@@ -26,10 +26,10 @@
 			        <a class="navbar-brand" href="/">Colman-Egan Blog</a>
 			    </div>
 			    {% if user.is_authenticated %}
-				    <div class="collapse navbar-collapse" id="main-navbar">
+				    <div class="collapse navbar-collapse" id="mainNavbar">
 						<a class="btn btn-default navbar-btn" href="{% url 'create' %}"><span class="glyphicon glyphicon-plus"></span> New Post</a>
 					    <ul class="nav navbar-nav navbar-right">
-					    	<li><a href="{% url 'flappy_hawk' %}"><span class="glyphicon glyphicon-knight"></span>    Flappy Hawk</a></li>
+					    	<li><a href="{% url 'flappy_hawk' %}"><span class="glyphicon glyphicon-knight"></span> Flappy Hawk</a></li>
 					    	<li><a href="{% url 'user_view' %}"><span class="glyphicon glyphicon-user"></span> Hi, {{ user.username }}</a></li>
 						    <li><a href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
 					    </ul>
