--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,11 @@
 						</div>
 					</div>
 					{% endif %}
+					{% if post.title == "Carter" %}
+						<video controls loop width="240" id="carter-video">
+							<source src="{% static 'videos/carter.mp4' %}" type="video/mp4">
+						</video>
+					{% endif %}
 				</div>
 				<div class="published-edited-dates">
 					{% if post.edited_date %}
@@ -46,7 +51,7 @@
 <!--The Leaderboard-->
 <div class="col-sm-3">
 	<div id="leaderboard">
-		<h1><span title="Users get 2 points for each boop and 1 point for each post">Leaderboard</span></h1>
+		<h1><span title="Users get 2 points for each boop, -1 points for each unboop, and 1 point for each post">Leaderboard</span></h1>
 		<ol>
 		{% for score in leaderboard %}
 			<li>{{ score.user }} with a score of {{ score.score }}</li>
