--- a/templates/detail.html
+++ b/templates/detail.html
@@ -20,9 +20,7 @@
 					</div>
 				{% endif %}
 				{% if post.title == "Carter" %}
-					<video controls loop width="240" id="carter-video">
-						<source src="{% static 'videos/carter.mp4' %}" type="video/mp4">
-					</video>
+					<video loop controls="true" width="240" src="{% static 'videos/carter.mp4' %}" type="video/mp4" id="carter-video"></video>
 				{% endif %}
 			</div>
 			{% if post.published_date %}
