--- a/templates/index.html
+++ b/templates/index.html
@@ -27,9 +27,7 @@
 					</div>
 					{% endif %}
 					{% if post.title == "Carter" %}
-						<video controls loop width="240" id="carter-video">
-							<source src="{% static 'videos/carter.mp4' %}" type="video/mp4">
-						</video>
+						<video loop controls="true" width="240" src="{% static 'videos/carter.mp4' %}" type="video/mp4" id="carter-video"></video>
 					{% endif %}
 				</div>
 				<div class="published-edited-dates">
