Resovlved Safari Issue

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,7 @@
 					{% if post.title == "Carter" %}
 						<video controls loop width="240" id="carter-video">
 							<source src="{% static 'videos/carter.mp4' %}" type="video/mp4">
+							Your browser does not support the video tag for some reason ¯\_(ツ)_/¯
 						</video>
 					{% endif %}
 				</div>
